--- a/src/app/pages/battlemaps/battlemaps.component.html
+++ b/src/app/pages/battlemaps/battlemaps.component.html
@@ -104,8 +104,8 @@
         </a>
       </div>
       <button class="clear toggle-button" (click)="self.methods.toggleNavStatus()">
-        <fa-icon class="bt-caret-right" [icon]="['fa', 'caret-right']"></fa-icon>
-        <fa-icon class="bt-caret-left" [icon]="['fa', 'caret-left']"></fa-icon>
+        <fa-icon class="bt-caret-right" [icon]="['fas', 'caret-right']"></fa-icon>
+        <fa-icon class="bt-caret-left" [icon]="['fas', 'caret-left']"></fa-icon>
       </button>
 
       <div class="help-link-wrapper hide-on-collapsed">
