--- a/src/app/pages/campaigns/tabs/npcs/npcs.component.html
+++ b/src/app/pages/campaigns/tabs/npcs/npcs.component.html
@@ -19,7 +19,7 @@
           <input type="text" class="form-control" (ngModelChange)="self.touch()" [(ngModel)]="npc.name" placeholder="Name">
         </div>
         <div class="flex-col flex-static">
-          <button title="Edit NPC" class="g-icon" (click)="self.methods.toggleActiveNPC(npc)"><fa-icon [icon]="['fa', 'edit']"></fa-icon></button>
+          <button title="Edit NPC" class="g-icon" (click)="self.methods.toggleActiveNPC(npc)"><fa-icon [icon]="['fas', 'edit']"></fa-icon></button>
         </div>
         <div class="flex-col flex-static">
           <button title="Remove NPC" class="g-remove" (click)="self.methods.removeByObject(self.model.npcs, npc)"><i class="material-icons">delete</i></button>
