--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <bt-static-container>
   <div class="announcement flex-row-all flex-gutters-5 flex-config-align-center">
     <div class="announcement-icon flex-static flex-col">
-      <div class="announcement-icon"><fa-icon [icon]="['fa', 'fire']"></fa-icon></div>
+      <div class="announcement-icon"><fa-icon [icon]="['fas', 'fire']"></fa-icon></div>
     </div>
     <div class="flex-col flex-dynamic">{{ announcementText }}</div>
   </div>
   <div class="loading-block" *ngIf="!ready">
-    <h4 class="hx-21"><fa-icon class="bt-icon-spin" [icon]="['fa', 'cog']"></fa-icon> Loading your BTT files, please wait ...</h4>
+    <h4 class="hx-21"><fa-icon class="bt-icon-spin" [icon]="['fas', 'cog']"></fa-icon> Loading your BTT files, please wait ...</h4>
   </div>
   <div class="ready-block content-base" *ngIf="ready">
     <div class="flex-row-tablet flex-gutters-15">
@@ -23,19 +23,19 @@
             <ul class="list-unstyled">
               <li *ngFor="let doc of documentsForType(type.slug)" class="flex-row-all flex-config-spaced">
                 <a [routerLink]="'/' + type.path + '/' + doc.id">
-                  <fa-icon class="permission-icon" [icon]="['fa', permissionIconForRole(doc)]"></fa-icon>
+                  <fa-icon class="permission-icon" [icon]="['fas', permissionIconForRole(doc)]"></fa-icon>
                   {{ doc.title }}
                 </a>
                 <div class="dashboard-file-admin-group flex-row-all">
                   <div class="flex-col">
                     <button class="icon-button" title="Share this document" (click)="sharer.openSharingModal(doc, type.slug)" *ngIf="doc.role === 'owner'">
-                      <fa-icon [icon]="['fa', 'share']"></fa-icon>
+                      <fa-icon [icon]="['fas', 'share']"></fa-icon>
                     </button>
                   </div>
 
                   <div class="flex-col">
                     <button class="icon-button" title="Copy this document" (click)="copyDocument(doc, type.slug)">
-                      <fa-icon [icon]="['fa', 'copy']"></fa-icon>
+                      <fa-icon [icon]="['fas', 'copy']"></fa-icon>
                     </button>
                   </div>
 
@@ -60,7 +60,7 @@
     <bt-interface></bt-interface>
     <div class="beta-disclaimer">
       <div>
-        <fa-icon [icon]="['fa', 'exclamation-triangle']"></fa-icon>
+        <fa-icon [icon]="['fas', 'exclamation-triangle']"></fa-icon>
         Disclaimer: Some of these products are in Beta! Beta tools are free, but they're still under constant development. <br>v{{ APP_VERSION }}
       </div>
     </div>
