--- a/src/app/pages/dnd5e-sheets/builder/powers/rogue/rogue.component.html
+++ b/src/app/pages/dnd5e-sheets/builder/powers/rogue/rogue.component.html
@@ -5,7 +5,7 @@
       <div class="flex-row-all flex-gutters-10">
         <div class="flex-col">
           <button class="button button-checkbox" (click)="self.model.powers.Rogue.archetype = archetype" [ngClass]="self.model.powers.Rogue.archetype === archetype ? 'checked' : 'unchecked'">
-            <fa-icon class="check-icon" [icon]="['fa', 'check']"></fa-icon>
+            <fa-icon class="check-icon" [icon]="['fas', 'check']"></fa-icon>
           </button>
         </div>
         <div class="flex-col">
