--- a/src/app/pages/dnd5e-sheets/tabs/spell-picker/spell-picker.component.html
+++ b/src/app/pages/dnd5e-sheets/tabs/spell-picker/spell-picker.component.html
@@ -12,8 +12,8 @@
   <div class="advanced-filtering" [ngClass]="self.locals.feedback.advanced_filtering ? 'active' : ''">
     <h4 class="gh4 clickable" (click)="self.locals.feedback.advanced_filtering = !self.locals.feedback.advanced_filtering">
       <span class="advanced-toggle">
-        <fa-icon class="show-advanced" [icon]="['fa', 'chevron-right']"></fa-icon>
-        <fa-icon class="hide-advanced" [icon]="['fa', 'chevron-down']"></fa-icon>
+        <fa-icon class="show-advanced" [icon]="['fas', 'chevron-right']"></fa-icon>
+        <fa-icon class="hide-advanced" [icon]="['fas', 'chevron-down']"></fa-icon>
       </span>
       Advanced Filtering
     </h4>
