--- a/src/app/components/common/tab-upgrade/tab-upgrade.component.html
+++ b/src/app/components/common/tab-upgrade/tab-upgrade.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="flex-col flex-dynamic">
       <h3 class="upgrade-subhead"><span>{{ self.methods.getActiveNavItem() }}</span> is a premium feature, which is available if you upgrade. Upgrading is only $10 ONCE and it really helps us deliver more updates, more features, and a better product. Plus upgraded users can make an unlimited amount of sheets! Please consider upgrading.</h3>
-      <a routerLink="/donate" class="button button-cyan button-large text-center"><fa-icon [icon]="['fa', 'star']"></fa-icon> Upgrade Now for $10</a>
+      <a routerLink="/donate" class="button button-cyan button-large text-center"><fa-icon [icon]="['fas', 'star']"></fa-icon> Upgrade Now for $10</a>
     </div>
   </div>
 </div>
