--- a/src/app/pages/dnd5e-sheets/builder/powers/fighter/fighter.component.html
+++ b/src/app/pages/dnd5e-sheets/builder/powers/fighter/fighter.component.html
@@ -5,7 +5,7 @@
       <div class="flex-row-all flex-gutters-10">
         <div class="flex-col">
           <button class="button button-checkbox" (click)="self.model.powers.Fighter.archetype = archetype" [ngClass]="self.model.powers.Fighter.archetype === archetype ? 'checked' : 'unchecked'">
-            <fa-icon class="check-icon" [icon]="['fa', 'check']"></fa-icon>
+            <fa-icon class="check-icon" [icon]="['fas', 'check']"></fa-icon>
           </button>
         </div>
         <div class="flex-col">
@@ -21,7 +21,7 @@
       <div class="flex-row-all flex-gutters-10">
         <div class="flex-col">
           <button class="button button-checkbox" (click)="self.model.powers.Fighter.style[0].text = style" [ngClass]="self.model.powers.Fighter.style[0].text === style ? 'checked' : 'unchecked'">
-            <fa-icon class="check-icon" [icon]="['fa', 'check']"></fa-icon>
+            <fa-icon class="check-icon" [icon]="['fas', 'check']"></fa-icon>
           </button>
         </div>
         <div class="flex-col">
