--- a/src/app/pages/dnd5e-sheets/builder/powers/paladin/paladin.component.html
+++ b/src/app/pages/dnd5e-sheets/builder/powers/paladin/paladin.component.html
@@ -4,7 +4,7 @@
     <div class="flex-row-all flex-gutters-10">
       <div class="flex-col">
         <button class="button button-checkbox" (click)="self.model.powers.Paladin.sacred_oath = oath" [ngClass]="self.model.powers.Paladin.sacred_oath === oath ? 'checked' : 'unchecked'">
-          <fa-icon class="check-icon" [icon]="['fa', 'check']"></fa-icon>
+          <fa-icon class="check-icon" [icon]="['fas', 'check']"></fa-icon>
         </button>
       </div>
       <div class="flex-col">
