--- a/src/app/pages/dnd5e-sheets/tabs/overview/overview.component.html
+++ b/src/app/pages/dnd5e-sheets/tabs/overview/overview.component.html
@@ -12,7 +12,7 @@
             <h2 class="group-header nav-clickable flex-dynamic" (click)="self.methods.switchTab('general')">
               {{ self.model.name }}: Level {{ self.methods.getTotalLevel() }} {{ self.methods.getAllKlasses() }}
             </h2>
-            <button *ngIf="!self.locals.data.editing_overview" (click)="self.locals.data.editing_overview = true" class="icon-button flex-static"><fa-icon [icon]="['fa', 'pencil-alt']"></fa-icon></button>
+            <button *ngIf="!self.locals.data.editing_overview" (click)="self.locals.data.editing_overview = true" class="icon-button flex-static"><fa-icon [icon]="['fas', 'pencil-alt']"></fa-icon></button>
             <button *ngIf="self.locals.data.editing_overview" (click)="self.locals.data.editing_overview = false" class="icon-button flex-static"><i class="material-icons">check</i> Done</button>
           </div>
           <p class="help-text" [class.bt-hide]="!self.model.prefs.help">This is your overview page. As you fill out details on the other tabs, the most relevant information will show up in a compact and easy-to-understand format here. You can also click on some of the text here to jump to the corresponding tab to edit its data.</p>
