fix for dnd5e attack display, componentize edit attack

--- a/src/app/pages/dnd5e-sheets/tabs/combat/combat.component.html
+++ b/src/app/pages/dnd5e-sheets/tabs/combat/combat.component.html
@@ -252,115 +252,7 @@
         <h3 class="h4">Attacks</h3>
         <p class="help-text" [class.bt-hide]="!self.model.prefs.help">Keep track of all the different kinds of attacks you can use during combat. You can also use this section to keep track of how many attacks your character gets during an Action.</p>
         <div cdkDropList [cdkDropListData]="self.model.attacks" (cdkDropListDropped)="self.methods.onSortableDrop($event)">
-          <div class="attack-row js-attack" *ngFor="let attack of self.methods.listAttacks()" cdkDrag [cdkDragData]="attack">
-            <div class="flex-row-all flex-config-bottom flex-gutters-5 bm-5">
-              <div class="flex-col flex-static">
-                <span class="drag-handle g-neutral" cdkDragHandle><i class="material-icons">menu</i></span>
-              </div>
-              <div class="form-group flex-col-6">
-                <label class="block-label">Attack Name</label>
-                <input type="text" (ngModelChange)="self.touch()" [(ngModel)]="attack.name" class="form-control" [placeholder]="self.methods.getAttackWeaponName(attack)">
-              </div>
-              <div class="form-group flex-col-6 flex-dynamic">
-                <label class="block-label">Type</label>
-                <div class="select-wrap">
-                  <i class="material-icons">arrow_drop_down</i>
-                  <label>{{ attack.type }}</label>
-                  <select class="form-control" (ngModelChange)="self.touch()" [(ngModel)]="attack.type">
-                    <option [value]="type" *ngFor="let type of self.locals.selection.attack_types">{{ type }}</option>
-                  </select>
-                </div>
-              </div>
-              <div class="flex-col flex-static" *ngIf="self.model.attacks.length > 1">
-                <button class="g-remove" (click)="self.methods.removeByObject(self.model.attacks, attack)"><i class="material-icons">delete</i></button>
-              </div>
-            </div>
-            <div class="flex-row-all flex-config-wrap flex-gutters-5">
-              <div class="form-group flex-col-6" *ngIf="attack.type === 'Physical'">
-                <label class="block-label">Weapon</label>
-                <div class="select-wrap">
-                  <i class="material-icons">arrow_drop_down</i>
-                  <label>{{ self.methods.getAttackWeaponName(attack) }}</label>
-                  <select class="form-control" (ngModelChange)="self.touch()" [(ngModel)]="attack.weapon">
-                    <option [value]="weapon.id" *ngFor="let weapon of self.methods.listWeapons()">{{ weapon.name }}</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group flex-col-6" *ngIf="attack.type !== 'Physical'">
-                <label class="block-label">Damage Dice</label>
-                <input type="text" (ngModelChange)="self.touch()" [(ngModel)]="attack.damage_die" class="form-control" placeholder="Damage Dice">
-              </div>
-              <div class="form-group flex-col-6 bm-5">
-                <label class="block-label" *ngIf="attack.type !== 'Spell Save'">Ability</label>
-                <label class="block-label" *ngIf="attack.type === 'Spell Save'">Save Ability</label>
-                <div class="select-wrap">
-                  <i class="material-icons">arrow_drop_down</i>
-                  <label>{{ attack.ability }}</label>
-                  <select class="form-control" (ngModelChange)="self.touch()" [(ngModel)]="attack.ability">
-                    <option [value]="abl" *ngFor="let abl of self.locals.selection.abilities">{{ abl }}</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group flex-col-6" *ngIf="attack.type === 'Spell Save' && self.methods.listKlasses().length > 1">
-                <label class="block-label">Save Class</label>
-                <div class="select-wrap">
-                  <i class="material-icons">arrow_drop_down</i>
-                  <label>{{ self.methods.klassNameForAttack(attack) }}</label>
-                  <select class="form-control" (ngModelChange)="self.touch()" [(ngModel)]="attack.weapon">
-                    <option [value]="klass.id" *ngFor="let klass of self.methods.listKlasses()">{{ klass.name }}</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group flex-col-6" *ngIf="attack.type === 'Spell Save'">
-                <label class="block-label">Save DC</label>
-                <label class="control-label">{{ self.methods.getSpellSaveDCForAttack(attack) }}</label>
-              </div>
-              <div class="form-group flex-col-6 bm-10" *ngIf="attack.type !== 'Spell Save'">
-                <label class="block-label">Attack Bonus</label>
-                <input type="number" (ngModelChange)="self.touch()" [(ngModel)]="attack.attack_bonus" class="form-control" placeholder="Attack Bonus">
-              </div>
-              <div class="form-group flex-col-6 bm-10" *ngIf="attack.type !== 'Spell Save'">
-                <label class="block-label">Damage Bonus</label>
-                <input type="number" (ngModelChange)="self.touch()" [(ngModel)]="attack.damage_bonus" class="form-control" placeholder="Damage Bonus">
-              </div>
-              <div class="flex-col-12" *ngIf="attack.type === 'Physical'">
-                <label class="checkbox-inline checkbox-wrap">
-                  <input type="checkbox" title="Offhand penalty?" (ngModelChange)="self.touch()" [(ngModel)]="attack.offhand"> Offhand penalty? (no fighting style)
-                </label>
-              </div>
-              <div class="flex-col-6" *ngIf="attack.type !== 'Spell Save'">
-                <label class="block-label">Attack Formula</label>
-                <label class="control-label">
-                  d20
-                  + <span>{{ self.methods.getAbilityMod(self.model.abilities[attack.ability]) }}</span>
-                  <span>
-                    + <span>{{ self.methods.getProficiencyTotal() }}</span>
-                  </span>
-                  <span *ngFor="let weapon of self.methods.getAttackWeaponAsArray(attack)">
-                    + <span>{{ weapon.attack_bonus }}</span>
-                  </span>
-                  <span *ngIf="attack.attack_bonus !== 0">
-                    + <span>{{ attack.attack_bonus }}</span>
-                  </span>
-                </label>
-              </div>
-              <div class="flex-col-6" *ngIf="attack.type !== 'Spell Save'">
-                <label class="block-label">Damage Formula</label>
-                <label class="control-label">
-                  <span>{{ attack.damage_die }}</span>
-                  <span *ngIf="attack.type === 'Physical' && !attack.offhand">
-                    + <span>{{ self.methods.getAbilityMod(self.model.abilities[attack.ability]) }}</span>
-                  </span>
-                  <span *ngFor="let weapon of self.methods.getAttackWeaponAsArray(attack)">
-                    + <span>{{ weapon.damage_bonus }}</span>
-                  </span>
-                  <span *ngIf="attack.damage_bonus !== 0">
-                    + <span>{{ attack.damage_bonus }}</span>
-                  </span>
-                </label>
-              </div>
-            </div>
-          </div>
+          <bt-dnd5e-attack *ngFor="let attack of self.methods.listAttacks()" [self]="self" [attack]="attack" [weapon]="self.methods.getAttackWeapon(attack)" cdkDrag [cdkDragData]="attack"></bt-dnd5e-attack>
         </div>
         <div class="button-wrap">
           <button class="g-add" (click)="self.methods.addAttack()"><i class="material-icons">add</i></button>
